syntax = "proto3";

option csharp_namespace = "Chat.Protos";
package chat;

import 'session.proto';

message JoinRoomRequest {
    string session_id = 1;
    string room = 2;
}

message LeaveRoomRequest {
    string session_id = 1;
    string room = 2;
}

message RoomSessionsRequest {
    string room = 1;
}

message RoomSessionsResponse {
    repeated PlayerInfo players = 1;
}

message RoomsResponse {
    repeated string rooms = 1;
}

message GetRoomBySessionIdRequest {
    string session_id = 1;
}

message GetRoomBySessionIdResponse {
    string room = 1;
}
